tests/baselines/reference/project/nestedLocalModuleSimpleCase/node/nestedLocalModuleSimpleCase.errors.txt
test1.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
test1.ts(2,23): error TS1147: Import declarations in a namespace cannot reference a module.


==== test1.ts (2 errors) ====
    export module myModule {
                  ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     import foo = require("test2");
                          ~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
     //console.log(foo.$);
    }
    
    
    